# nooforge

./: LICENSE  README.md  pyproject.toml
nooforge/: __init__.py  __main__.py  registry.py  server.py
nooforge/cli/: __init__.py  interactive.py  main.py  utils.py
nooforge/cli/commands/: __init__.py  export.py  generate.py  import_.py  info.py  lint.py  list.py  paths.py  remove.py  serve.py
nooforge/core/: __init__.py  constants.py  extract.py  lint.py  mcp_script.py  utils.py
nooforge/handlers/: __init__.py  base.py  claude.py  cline.py  continue_.py  cursor.py  gemini.py  ollama.py  open_interpreter.py  universal.py  windsurf.py  zed.py
